<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fontFamily="@font/work_sans_medium"
    android:background="@color/WhiteColor"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".login_and_signUp.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/ic_welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/curved_bordered_rectangle"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/login"
            android:textColor="@color/mainColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="center"
            android:letterSpacing="0.05"

            android:text="@string/register"
            android:textColor="@color/mainColor"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">


            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/til1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/l_username"
                    android:drawableStart="@drawable/user_login"
                    android:fontFamily="@font/work_sans_medium"
                    android:hint="@string/prompt_username"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/til2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/l_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/key_login"
                    android:fontFamily="@font/work_sans_medium"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:letterSpacing="0.05"
                    android:paddingStart="8dp"
                    android:selectAllOnFocus="true"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/l_button"
                android:textColor="#fff"
                android:background="@drawable/curved_borederless_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:layout_marginTop="45dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:fontFamily="@font/work_sans_medium"
                android:letterSpacing="0.08"
                android:layout_marginBottom="15dp"
                android:text="@string/Done" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/til3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                    android:fontFamily="@font/work_sans_medium"
                    android:hint="@string/prompt_email"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:id="@+id/r_email"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/til4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:fontFamily="@font/work_sans_medium"
                    android:hint="@string/prompt_username"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:id="@+id/r_username"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/til5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/r_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:fontFamily="@font/work_sans_medium"
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:drawablePadding="10dp"
                android:letterSpacing="0.05"
                android:paddingStart="8dp"
                android:selectAllOnFocus="true"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/til6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/r_c_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                    android:fontFamily="@font/work_sans_medium"
                    android:hint="@string/prompt_c_password"
                    android:imeOptions="actionNext"
                    android:drawablePadding="10dp"
                    android:letterSpacing="0.05"
                    android:paddingStart="8dp"
                    android:selectAllOnFocus="true"
                   />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/r_Button"
                android:textColor="#fff"
                android:background="@drawable/curved_borederless_rectangle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:layout_marginTop="45dp"
                android:layout_marginStart="55dp"
                android:layout_marginEnd="55dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:fontFamily="@font/work_sans_medium"
                android:letterSpacing="0.08"
                android:layout_marginBottom="15dp"
                android:text="@string/Done" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>